src/test/data/c/fail/typedef_conflict.c.err
data/c/fail/typedef_conflict.c:2:1-20: error: conflicting types for typedef 'myint'
 2 | typedef long myint;
   | ^~~~~~~~~~~~~~~~~~~
